	* po: en.po, de.po: updated l10n
	* doc/man: C/xvidcap.1.xml, C/xvidcap.1.xml.pot, 
		de/xvidcap.1-de.po, it/xvidcap.1-it.po:
		updated l10n
	* doc/xvidcap: C/figures/prefs-general.png, 
		C/xvidcap.xml, C/xvidcap.xml.pot, 
		de/xvidcap.xml-de.po, 
		de/figures/prefs-general.png, 
		it/xvidcap.xml-it.po, po/en.po:
		updated l10n
	* po: ru.po, es.po, de.po, it.po, zh_CN.po: 
		updated l10n

2007-05-12  lon  <lon83129@126.com>
	* po/zh_CN.po: Chinese l10n

2007-05-12  Alexander Kraev  <alexander.kraev@gmail.com>
	* po/ru.po: Initial bits of Russian l10n

2007-05-12  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, gnome_frame.c: fix for 
		bug # 1713971
	* src/xtoffmpeg.c: fix for bug # 1713968
	* src: codecs.c, control.h, xtoffmpeg.c, gnome_ui.c, 
		capture.c, gnome_ui.h, eggtrayicon.c, 
		gnome_frame.c, eggtrayicon.h, options.c: 
		code cleanup, fixed bug around releasing
		pause in stopped mode that would not set
		VC_STOP immediately
	* src/gnome_ui.c: fix bug around calculating
		capture times when stopping paused
		session (and as a consequence the avg
		frame rate calculation)

2007-05-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_ui.c, app_data.h, gnome_frame.c, 
		gnome_options.c, Makefile.am, options.c, 
		gnome-xvidcap.glade: initial version of
		"minimize to tray" (rfe # 1520188), fix
		for bug # 1711808 and bug # 1709369
	* src: eggtrayicon.c, eggtrayicon.h: forgot to
		add for previous commit
	* src: gnome_ui.c, gnome_ui.h, gnome_frame.c:
		saving screen real estate by removing
		image in minimized form, also fixed
		frame as undraggable while recording
		and deiconify main control earlier
		when stopping

2007-05-02  Vincenzo Reale <smart2128@baslug.org>
	* po/it.po: updated Italian translation

2007-05-01  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: app_data.c, app_data.h, gnome_options.c:
		add error msg for mono vorbis audio as ffmpeg
		only supports stereo atm.
	* src/app_data.c, doc/xvidcap/C/xvidcap.xml, 