@@ -86,7 +86,7 @@ output.
 .TP 
 \fB\-\-quality \fIquality percentage\fB\fR
 Specify a value between \fB0\fR and \fB100\fR to define the quality encoding. The 
-default value is \fB75\fR. Note that the effect of a value below \fB100\fR has changed in version
+default value is \fB90\fR. Note that the effect of a value below \fB100\fR has changed in version
 1.1.5.
 .TP 
 \fB\-\-source \fRx11|shm
@@ -175,15 +175,15 @@ default is \fB/dev/dsp\fR.
 cat some.mp3 | xvidcap \-\-audio_in \-
 .TP 
 \fB\-\-audio_bits \fIaudio bit rate\fB\fR
-Set the desired bit rate. The default is \fB32000\fR bit. Note that when using
+Set the desired bit rate. The default is \fB64000\fR bit. Note that when using
 STDIN input the input file will be resampled as needed.
 .TP 
 \fB\-\-audio_rate \fIaudio sample rate\fB\fR
-Set the desired sample rate. The default is \fB22050\fR Hz. Note that when using
+Set the desired sample rate. The default is \fB44100\fR Hz. Note that when using
 STDIN input the input file will be resampled as needed.
 .TP 
 \fB\-\-audio_channels \fIaudio channels\fB\fR
-Set the desired number of channels. The default is \fB1\fR for mono. Any value
+Set the desired number of channels. The default is \fB2\fR for stereo. Any value
 above \fB2\fR is probably only useful with STDIN input and a 5\-channel AC audio
 input file or very good and rare recording equipment.
 .SH AUTHORS
