@@ -683,6 +683,23 @@
                                 <para>Spuntare questa opzione per mostrare sempre una finestra con un riepilogo dei risultati di acquisizione all'interruzione di una sessione di registrazione. La finestra sarà mostrata sempre se richiesto (ad es. per specificare il nome file di destinazione). In tal caso, la finestra potrebbe essere mostrato anche se non strettamente necessario. Per scelta predefinita, la finestra dei risultati è sempre visualizzata. Se si rimuove la spunta da <quote>Mostra questa finestra la prossima volta</quote> nella finestra precedente, è possibile riattivarla qui.</para>
                             </entry>
                         </row>
+                        <row id="xvidcap-prefs-TBL-minimize-to-tray">
+                            <entry>
+                                <para>
+                                    Minimize to System Tray
+                                </para>
+                            </entry>
+                            <entry>
+                                <para>
+                                    Check this to make <application>xvidcap</application> minimize to the
+				    system tray on starting a recording session. In that case the main
+				    control panel will hide and the frame drop monitor will apear in the
+				    system tray. A right-click on it will allow you to pause or stop the
+				    recording session. On stopping the main control window will be
+				    displayed again.
+                                </para>
+                            </entry>
+                        </row>
                         <row id="xvidcap-prefs-TBL-rescale">
                             <entry>
                                 <para>Percentuale di ridimensionamento dell'uscita</para>
